RESOLVED FIXED Bug 38798
REGRESSION(59000): r59000 contained all sorts of changes it should not have, needs revert.
https://bugs.webkit.org/show_bug.cgi?id=38798
Summary REGRESSION(59000): r59000 contained all sorts of changes it should not have, ...
Eric Seidel (no email)
Reported 2010-05-08 00:08:16 PDT
REGRESSION(59000): r59000 contained all sorts of changes it should not have, needs revert.
Attachments
Patch (51.95 KB, patch)
2010-05-08 00:10 PDT, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2010-05-08 00:09:18 PDT
I think this was caused by using webkit-patch land --squash from a not-fully up-to-date branch?
Eric Seidel (no email)
Comment 2 2010-05-08 00:10:42 PDT
Eric Seidel (no email)
Comment 3 2010-05-08 00:15:43 PDT
Note You need to log in before you can comment on or make changes to this bug.