WebCore/bindings/js/JSCustomVoidCallback.h
@@ -53,6 +53,7 @@ private:
     JSCustomVoidCallback(JSC::JSObject* callback, JSDOMGlobalObject*);
 
     JSCallbackData* m_data;
+    ScriptExecutionContext* m_scriptExecutionContext;
 };
 
 } // namespace WebCore
