WebKitTools/Scripts/webkitpy/layout_tests/port/chromium_linux.py
@@ -49,11 +49,8 @@ class ChromiumLinuxPort(chromium.ChromiumPort):
         chromium.ChromiumPort.__init__(self, port_name, options)
 
     def baseline_search_path(self):
-        return [self._webkit_baseline_path('chromium-linux'),
-                self._webkit_baseline_path('chromium-win'),
-                self._webkit_baseline_path('chromium'),
-                self._webkit_baseline_path('win'),
-                self._webkit_baseline_path('mac')]
+        port_names = ["chromium-linux", "chromium-win", "chromium", "win", "mac"]
+        return map(self._webkit_baseline_path, port_names)
 
     def check_build(self, needs_http):
         result = chromium.ChromiumPort.check_build(self, needs_http)
