third_party/WebKit/WebCore/bindings/scripts/CodeGeneratorJS.pm
@@ -1059,7 +1059,7 @@ sub GenerateAttributesHashTable($$)
         push(@specials, "DontDelete") unless $attribute->signature->extendedAttributes->{"Deletable"};
         push(@specials, "DontEnum") if $attribute->signature->extendedAttributes->{"DontEnum"};
         push(@specials, "ReadOnly") if $attribute->type =~ /readonly/;
-        my $special = (@specials > 0) ? join("|", @specials) : "0";
+        my $special = (@specials > 0) ? join(" | ", @specials) : "0";
         push(@hashSpecials, $special);
 
         my $getter = "js" . $interfaceName . $codeGenerator->WK_ucfirst($attribute->signature->name) . ($attribute->signature->type =~ /Constructor$/ ? "Constructor" : "");
@@ -1083,7 +1083,7 @@ sub GenerateAttributesHashTable($$)
         my $getter = "js" . $interfaceName . "Constructor";
         push(@hashValue1, $getter);
         push(@hashValue2, "0");
-        push(@hashSpecials, "DontEnum|ReadOnly"); # FIXME: Setting the constructor should be possible.
+        push(@hashSpecials, "DontEnum | ReadOnly"); # FIXME: Setting the constructor should be possible.
     }
 
     $object->GenerateHashTable($hashName, $hashSize,
@@ -1147,7 +1147,7 @@ sub GenerateImplementation
             my $getter = "js" . $interfaceName . $codeGenerator->WK_ucfirst($constant->name);
             push(@hashValue1, $getter);
             push(@hashValue2, "0");
-            push(@hashSpecials, "DontDelete|ReadOnly");
+            push(@hashSpecials, "DontDelete | ReadOnly");
         }
 
         $object->GenerateHashTable($hashName, $hashSize,
@@ -1175,7 +1175,7 @@ sub GenerateImplementation
         my $getter = "js" . $interfaceName . $codeGenerator->WK_ucfirst($constant->name);
         push(@hashValue1, $getter);
         push(@hashValue2, "0");
-        push(@hashSpecials, "DontDelete|ReadOnly");
+        push(@hashSpecials, "DontDelete | ReadOnly");
     }
 
     foreach my $function (@{$dataNode->functions}) {
@@ -1192,7 +1192,7 @@ sub GenerateImplementation
         push(@specials, "DontDelete") unless $function->signature->extendedAttributes->{"Deletable"};
         push(@specials, "DontEnum") if $function->signature->extendedAttributes->{"DontEnum"};
         push(@specials, "Function");
-        my $special = (@specials > 0) ? join("|", @specials) : "0";
+        my $special = (@specials > 0) ? join(" | ", @specials) : "0";
         push(@hashSpecials, $special);
     }
 
@@ -2008,6 +2008,7 @@ sub GenerateCallbackHeader
     # Private members
     push(@headerContent, "    JSCallbackData* m_data;\n");
     push(@headerContent, "    RefPtr<DOMWrapperWorld> m_isolatedWorld;\n");
+    push(@headerContent, "    ScriptExecutionContext* m_scriptExecutionContext;\n");
     push(@headerContent, "};\n\n");
 
     push(@headerContent, "} // namespace WebCore\n\n");
@@ -2039,13 +2040,14 @@ sub GenerateCallbackImplementation
     push(@implContent, "${className}::${className}(JSObject* callback, JSDOMGlobalObject* globalObject)\n");
     push(@implContent, "    : m_data(new JSCallbackData(callback, globalObject))\n");
     push(@implContent, "    , m_isolatedWorld(globalObject->world())\n");
+    push(@implContent, "    , m_scriptExecutionContext(globalObject->scriptExecutionContext())\n");
     push(@implContent, "{\n");
     push(@implContent, "}\n\n");
 
     # Destructor
     push(@implContent, "${className}::~${className}()\n");
     push(@implContent, "{\n");
-    push(@implContent, "    callOnMainThread(JSCallbackData::deleteData, m_data);\n");
+    push(@implContent, "    m_scriptExecutionContext->postTask(DeleteCallbackDataTask::create(m_data));\n");
     push(@implContent, "#ifndef NDEBUG\n");
     push(@implContent, "    m_data = 0;\n");
     push(@implContent, "#endif\n");
