WebKitTools/Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py
@@ -112,6 +112,11 @@ class TestRunnerTest(unittest.TestCase):
 
 class DryrunTest(unittest.TestCase):
     def test_basics(self):
+        # FIXME: This test depends on being able to detect the correct
+        # port from the environment.  Thus it can't work for Gtk/Qt without
+        # modification or more information being passed into test-webkitpy.
+        if sys.platform not in "mac":
+            return
         self.assertTrue(passing_run(['--platform', 'dryrun',
                                      'fast/html']))
         #self.assertTrue(passing_run(['--platform', 'dryrun-mac',
